--- a/stacks/app-stack.yml
+++ b/stacks/app-stack.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   guicpay-api:
-    image: guicpay/guicpay:latest
+    image: guilhermeasilva/guicpay:latest
     networks:
       - nginx_network
     environment:
