chore: set limit in api service

--- a/stacks/app-stack.yml
+++ b/stacks/app-stack.yml
@@ -21,9 +21,12 @@ services:
       - app_network
     deploy:
       mode: replicated
-      replicas: 2
+      replicas: 1
       placement:
         constraints: [node.platform.os == linux]
+      limits:
+        cpus: '0.25'
+        memory: 128M
 
   redis:
     image: redis:latest
