--- a/stacks/app-stack.yml
+++ b/stacks/app-stack.yml
@@ -24,9 +24,10 @@ services:
       replicas: 1
       placement:
         constraints: [node.platform.os == linux]
-      limits:
-        cpus: '0.25'
-        memory: 128M
+      resources:
+        limits:
+          cpus: '0.25'
+          memory: 128M
 
   redis:
     image: redis:latest
