--- a/stacks/nginx-stack.yml
+++ b/stacks/nginx-stack.yml
@@ -18,8 +18,7 @@ services:
       mode: replicated
       replicas: 1
       placement:
-        constraints: [node.role == manager]
-
+        constraints: [node.platform.os == linux]
 secrets:
   ssl_cert:
     external: true
