--- a/stacks/app-stack.yml
+++ b/stacks/app-stack.yml
@@ -19,15 +19,16 @@ services:
     networks:
       - nginx_network
       - app_network
+      - pg_network
     deploy:
       mode: replicated
-      replicas: 1
+      replicas: 2
       placement:
         constraints: [node.platform.os == linux]
       resources:
         limits:
-          cpus: '0.25'
-          memory: 128M
+          cpus: '0.50'
+          memory: 256M
 
   redis:
     image: redis:latest
@@ -38,6 +39,10 @@ services:
       replicas: 1
       placement:
         constraints: [node.platform.os == linux]
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1024M
 
   zipkin:
     image: openzipkin/zipkin:latest
@@ -50,6 +55,10 @@ services:
       replicas: 1
       placement:
         constraints: [node.role == manager]
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2048M
 
 volumes:
   zipkin_data:
@@ -58,4 +67,6 @@ networks:
   nginx_network:
     external: true
   app_network:
+    external: true
+  pg_network:
     external: true
