--- a/stacks/nginx/nginx.conf
+++ b/stacks/nginx/nginx.conf
@@ -5,14 +5,13 @@ events {
 }
 
 http {
-    server {
-        listen              80;
-        server_name         *.guicpay.tech;
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
-    }
+    # server {
+    #     listen              80;
+    #     server_name         *.guicpay.tech;
+    #     location / {
+    #         return 301 https://$host$request_uri;
+    #     }
+    # }
 
     server {
         listen              443 ssl;
